WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242342
Object.prototype.toString.call for a revoked Proxy has the wrong error message
https://bugs.webkit.org/show_bug.cgi?id=242342
Summary
Object.prototype.toString.call for a revoked Proxy has the wrong error message
Jordan Harband
Reported
2022-07-05 09:38:48 PDT
`var r = Proxy.revocable({}, {}); r.revoke(); Object.prototype.toString.call(r.proxy)` produces an error with a message "Array.isArray cannot be called on a Proxy that has been revoked", which should appear with `Array.isArray(r.proxy)` but should not appear with `Object.prototype.toString.call(r.proxy)`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-12 09:39:16 PDT
<
rdar://problem/96893485
>
serakeri
Comment 2
2022-08-17 14:02:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3424
serakeri
Comment 3
2022-09-01 11:47:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3923
EWS
Comment 4
2022-09-03 12:45:20 PDT
Committed
254134@main
(78a9dd6fd369): <
https://commits.webkit.org/254134@main
> Reviewed commits have been landed. Closing PR #3923 and removing active labels.
Jordan Harband
Comment 5
2023-02-18 21:41:41 PST
Which version of Safari might this appear in? 16.2 still has the issue.
Jordan Harband
Comment 6
2023-07-05 20:45:57 PDT
Safari 16.3 also still has this issue.
Jordan Harband
Comment 7
2023-12-05 12:09:15 PST
This continues to be a problem in Safari 17.1.
Jordan Harband
Comment 8
2023-12-05 12:09:48 PST
oops, i misunderstood; this is indeed resolved in 17.1.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug