Fix error message for O.p.toString on revoked proxy https://bugs.webkit.org/show_bug.cgi?id=242342

Reviewed by NOBODY (OOPS!).

* JSTests/stress/array-isarray-error-message.js: Added.
* Source/JavaScriptCore/runtime/ArrayConstructor.cpp:
* Source/JavaScriptCore/runtime/Intrinsic.cpp:
* Source/JavaScriptCore/runtime/Intrinsic.h:
* Source/JavaScriptCore/runtime/JSGlobalObject.cpp: